--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
 header, footer {
     width: 100%;
     height: 120px;
-    background-color: blue;
+    background-color: rgb(33, 33, 33);
     color: white;
 }
 
@@ -27,15 +27,14 @@ ul {
     font-size: 20px;
 }
 
-p {
+h4 {
     text-align: center;
-    font-size: 30px;
-  }
+}
   
 .card {
     width: 80%;
     margin: 40px auto;
-    border: 5px solid gray;
-    box-shadow: 5px 10px #888888;
+    border: 5px solid rgb(33, 33, 33);
+    box-shadow: 5px 10px #cfcfcf;
   }
   
